--- a/templates/allPlace.html
+++ b/templates/allPlace.html
@@ -286,85 +286,63 @@
 		</div><!-- End row -->
 	</div><!-- End container -->
 </div>
-	<footer>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-4 col-sm-3">
-					<div class="small-box widget_text" id="text-2">
-						<h3 class="widgettitle">VỀ CHÚNG TÔI</h3>
-						<div class="textwidget">
-							<p><b><strong>Website du lịch quận Hoàn Kiếm<br />
-									</strong></b><em>“Khám phá vẻ đẹp vô tận của Hoàn Kiếm</em><br />
-								<em>Discover the endless beauty of Hoan Kiem”<br />
-							</p>
-						</div>
-					</div>
-					<div class="contact-box small-box contact_info" id="ct_contact_info_widget-6">
-						<h3 class="widgettitle">LIÊN HỆ</h3>
-						<div class="contact-info">
-							<a class="phone_number" href="tel:0763.138.101">0763138101</a>
-							<a class="email_address" href="mailto:booking@webdulichdanang.com">hoankiem@gmail.com</a>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-3">
-					<div class="small-box widget_nav_menu" id="nav_menu-2">
-						<h3 class="widgettitle">MỤC LỤC</h3>
-						<div class="menu-menu-footer-2-container">
-							<ul class="menu" id="menu-menu-footer-2">
-								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2202"
-									id="menu-item-2202"><a
-										href="#">Hotels</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1908"
-									id="menu-item-1908"><a href="#">Tours</a>
-								</li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1909"
-									id="menu-item-1909"><a href="#">Blog</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2694"
-									id="menu-item-2694"><a href="#">Places</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1910"
-									id="menu-item-1910"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1289"
-									id="menu-item-1289"><a href="#">Liên hệ</a></li>
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-3 col-sm-3">
-					<div class="small-box widget_nav_menu" id="nav_menu-3">
-						<h3 class="widgettitle">KHÁM PHÁ</h3>
-						<div class="menu-menu-footer-3-container">
-							<ul class="menu" id="menu-menu-footer-3">
-								<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1912"
-									id="menu-item-1912"><a href="#">Sự Kiện</a></li>
-								<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1911"
-									id="menu-item-1911"><a href="#">Hoạt Động</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2695"
-									id="menu-item-2695"><a href="#">Hướng Dẫn</a></li>
-								<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1914"
-									id="menu-item-1914"><a href="#">Places</a></li>
-								<li class="menu-item menu-item-type-taxonomy menu-item-object-category menu-item-1916"
-									id="menu-item-1916"><a href="#">Đặc Sản</a></li>
-								
-							</ul>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-2 col-sm-3">
-					<div class="small-box widget_nav_menu" id="nav_menu-5">
-						<h3 class="widgettitle">LIÊN KẾT</h3>
-						<div class="menu-lien-ket-container">
-							<ul class="menu" id="menu-lien-ket">
-								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1904"
-									id="menu-item-1904"><a href="/">Trang Chủ</a>
-								</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div><!-- End row -->
-		</div><!-- End container -->
-	</footer><!-- End footer -->
+<footer class="text-center text-lg-start text-white" style="background-color: #929fba">
+    <div class="container p-4 pb-0">
+        <section class="">
+            <div class="row">
+                <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+                    <h6 class="text-uppercase mb-4 font-weight-bold" id="about-us">
+                        About Us
+                    </h6>
+                    <style>
+                        .text-uppercase{
+                            font-size: 20px;
+                            font-weight: bold;
+                        }
+                        .contact-infor{
+                            color: white; 
+                        }
+                    </style>
+                    <p> Khám phá vẻ đẹp của Hoàn Kiếm </p>
+                </div>
+                <hr class="w-100 clearfix d-md-none" />
+                <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <h6 class="text-uppercase mb-4 font-weight-bold">Navigator</h6>
+                    <p> <a class="text-white" href="/">Home</a> </p>
+                    <p> <a class="text-white" href="/all/hotel">Hotels</a> </p>
+                    <p> <a class="text-white" href="/all/place">Places</a> </p>
+                    <p>
+                        <a class="text-white" href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Maps</a>
+                    </p>
+                </div>
+                <hr class="w-100 clearfix d-md-none" />
+                <hr class="w-100 clearfix d-md-none" />
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+                    <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
+                    <p><i class="fas fa-home mr-3"></i> <br> <a href="https://www.haui.edu.vn/en" class="contact-infor"> Hanoi University of Industry</a></p>
+                    <p><i class="fas fa-envelope mr-3"></i> <br> <a href="mailto:truonghieu2312@gmail.com" class="contact-infor">truonghieu2312@gmail.com</a></p>
+                    <p><i class="fas fa-phone mr-3"></i> <br> <a href="tel:0967.296.991" class="contact-infor"> 0967 296 991</a></p>
+                </div>
+                <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+                    <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
+                    <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/truonghieu.nguyen.3551" role="button">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac" href="https://www.instagram.com/_nguyentruonghieu/" role="button">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a class="btn btn-primary btn-floating m-1" style="background-color: #333333" href="https://github.com/nth2312" role="button">
+                        <i class="fab fa-github"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
+    </div>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)"> 
+        © 2024 Copyright: <br>
+        <a class="text-white" href="https://www.facebook.com/truonghieu.nguyen.3551">NguyenTruongHieu - VuTheBao - DuongThiHue</a>
+    </div>
+</footer>
 	<div id="toTop"></div><!-- Back to top button -->
 	<div id="overlay"><i class="icon-spin3 animate-spin"></i></div>
 	<div class="hk-option-button-contact" style="padding-bottom: 40px;">
