update blog, admin route

--- a/templates/allHotel.html
+++ b/templates/allHotel.html
@@ -149,6 +149,9 @@
     <link href="/static/css/font-awesome.css" id="rs-icon-set-fa-icon-css" media="all" property="stylesheet"
         rel="stylesheet" type="text/css" />
     <link href="/static/css/fontello.css" id="ct_style_fontello-css" media="all" rel="stylesheet" type="text/css" />
+    
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 </head>
 
 <body class="archive post-type-archive post-type-archive-hotel wpb-js-composer js-comp-ver-6.9.0 vc_responsive">
@@ -340,7 +343,7 @@
 </footer>	
 <div id="toTop"></div><!-- Back to top button -->
 	<div id="overlay"><i class="icon-spin3 animate-spin"></i></div>
-	<div class="hk-option-button-contact" style="padding-bottom: 40px;">
+	<div class="hk-option-button-contact" style="padding-bottom: 40px; padding-left:20px;">
         <ul>
             <li class="phone-container">
                 <a href="https://zalo.me/0967296991" target="_blank"><span class="button-hk-contact zalo"
