--- a/templates/allPlace.html
+++ b/templates/allPlace.html
@@ -149,22 +149,8 @@
     <link href="/static/css/font-awesome.css" id="rs-icon-set-fa-icon-css" media="all" property="stylesheet"
         rel="stylesheet" type="text/css" />
     <link href="/static/css/fontello.css" id="ct_style_fontello-css" media="all" rel="stylesheet" type="text/css" />
-
-    <!-- <noscript>
-        <style>
-            .wpb_animate_when_almost_visible {
-                opacity: 1;
-            }
-        </style>
-    </noscript>
-    <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-80980535-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-80980535-1');
-    </script> -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 </head>
 
 <body class="archive post-type-archive post-type-archive-hotel wpb-js-composer js-comp-ver-6.9.0 vc_responsive">
@@ -345,7 +331,7 @@
 </footer>
 	<div id="toTop"></div><!-- Back to top button -->
 	<div id="overlay"><i class="icon-spin3 animate-spin"></i></div>
-	<div class="hk-option-button-contact" style="padding-bottom: 40px;">
+	<div class="hk-option-button-contact" style="padding-bottom: 40px; padding-left:20px;">
         <ul>
             <li class="phone-container">
                 <a href="https://zalo.me/0967296991" target="_blank"><span class="button-hk-contact zalo"
