--- a/templates/detailHotel.html
+++ b/templates/detailHotel.html
@@ -52,6 +52,9 @@
     <link href="/static/css/styles.css" id="contact-form-7-css" media="all" rel="stylesheet" type="text/css" />
     <link href="/static/css/thumbs-grid.min.css" id="crp-style-thumbs-grid-css" media="all" rel="stylesheet"
         type="text/css" />
+        
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
     <style id="crp-style-thumbs-grid-inline-css" type="text/css">
         .crp_related.crp-thumbs-grid ul li a.crp_link {
             grid-template-rows: 100px auto;
@@ -715,7 +718,7 @@
     </script>
     <!-- <div id="toTop"></div> -->
     <div id="overlay"><i class="icon-spin3 animate-spin"></i></div>
-    <div class="hk-option-button-contact" style="padding-bottom: 40px;">
+    <div class="hk-option-button-contact" style="padding-bottom: 40px; padding-left:20px;">
         <ul>
             <li class="phone-container">
                 <a href="https://zalo.me/0967296991" target="_blank"><span class="button-hk-contact zalo"
