--- a/templates/login.html
+++ b/templates/login.html
@@ -59,7 +59,7 @@
                             id="remember-account"
                         />
                         <label for="remember-account">
-                            Remember for 30 days
+                            Remember me
                         </label>
                     </div>
                 </div>
