--- a/templates/main.html
+++ b/templates/main.html
@@ -40,6 +40,8 @@
 	<link href="/static/css/styles.css" id="contact-form-7-css" media="all" rel="stylesheet" type="text/css" />
 	<link href="/static/css/thumbs-grid.min.css" id="crp-style-thumbs-grid-css" media="all" rel="stylesheet"
 		type="text/css" />
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.2/mdb.min.css" rel="stylesheet"/>
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
 	<style id="crp-style-thumbs-grid-inline-css" type="text/css">
 		.crp_related.crp-thumbs-grid ul li a.crp_link {
 			grid-template-rows: 100px auto;
@@ -516,44 +518,209 @@
 					</div>
 				</div>
 			</div>
-			<div class="main_title" id="blog">
-				<h2>Blog&nbsp;<b>du lịch</b>&nbsp;Hoàn Kiếm</h2>
-				<p>Những bài viết chia sẻ về kinh nghiệm du lịch Hoàn Kiếm mới nhất</p>
+			
+			<div class="vc_row wpb_row vc_row-fluid margin_60 inner-container" id="blog">
+				<div class="container">
+					<div class="row">
+						<div class="col-sm-12">
+							<div class="vc_empty_space" style="height: 26px"><span class="vc_empty_space_inner"></span></div>
+							<div>
+								<div class="main_title">
+									<div class="main_title">
+										<h2>
+											Blog <b> du lịch </b> Hoàn Kiếm
+										</h2>
+										<p>
+											Những bài viết chia sẻ về du lịch Hoàn Kiếm
+										</p>
+									</div>
+								</div>
+							</div>
+							<div class="vc_grid-container-wrapper vc_clearfix vc_grid-animation-fadeIn">
+								<div class="vc_grid-container vc_clearfix wpb_content_element vc_basic_grid"
+									data-initial-loading-animation="fadeIn"
+									data-vc-grid-settings='{"style":"all","action":"vc_get_vc_grid_data","tag":"vc_basic_grid"}'>
+									<style data-type="vc_shortcodes-custom-css">
+										.vc_custom_1419253765784 {
+											background-color: rgba(0, 0, 0, 0.3) !important;
+											*background-color: rgb(0, 0, 0) !important;
+										}
+									</style>
+									<div class="vc_grid vc_row vc_grid-gutter-30px vc_pageable-wrapper vc_hook_hover"
+										data-vc-pageable-content="true">
+										<div class="vc_pageable-slide-wrapper vc_clearfix" data-vc-grid-content="true">
+											<div class="vc_grid-item vc_clearfix vc_col-sm-3">
+												<div class="vc_grid-item-mini vc_clearfix">
+													<div class="vc_gitem-animated-block vc_gitem-animate vc_gitem-animate-none"
+														data-vc-animation="none">
+														<div class="vc_gitem-zone vc_gitem-zone-a vc-gitem-zone-height-mode-auto vc-gitem-zone-height-mode-auto-1-1 vc_gitem-is-link"
+															style="background-image: url('https://cdn.onehousing.vn/cdn-cgi/image/fit=scale-down,width=1336/image-resize/width=960,height=960/transaction-media/NcRGdFAWxfpGDuhgmDJndQdKrLJcDf.jpg') !important;">
+															<a class="vc_gitem-link vc-zone-link"
+																href="https://reatimes.vn/tuyen-xe-buyt-di-den-ho-hoan-kiem-nhanh-va-thuan-tien-nhat-2022002.htm"
+																title="Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên">
+															</a>
+															<img alt="Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên"
+																class="vc_gitem-zone-img"
+																src="https://cdn.onehousing.vn/cdn-cgi/image/fit=scale-down,width=1336/image-resize/width=960,height=960/transaction-media/NcRGdFAWxfpGDuhgmDJndQdKrLJcDf.jpg" />
+															<div class="vc_gitem-zone-mini">
+																<div class="vc_gitem_row vc_row vc_gitem-row-position-middle">
+																	<div class="vc_col-sm-12 vc_gitem-col vc_gitem-col-align-">
+																		<div
+																			class="vc_custom_heading vc_gitem-post-data vc_gitem-post-data-source-post_date">
+																			<h3
+																				style="font-size: 22px;color: #ffffff;text-align: center;font-family:Ubuntu Condensed;font-weight:400;font-style:normal">
+																				<a class="vc_gitem-link"
+																					href="https://reatimes.vn/tuyen-xe-buyt-di-den-ho-hoan-kiem-nhanh-va-thuan-tien-nhat-2022002.htm"
+																					title="Tuyến xe Bus đến Hồ Hoàn Kiếm tiện lợi nhất">
+																					03/11/2016
+																				</a>
+																			</h3>
+																		</div>
+																		<div
+																			class="vc_custom_heading vc_gitem-post-data vc_gitem-post-data-source-post_title">
+																			<h3
+																				style="font-size: 22px;color: #ffffff;text-align: center;font-family:Roboto Condensed;font-weight:700;font-style:normal">
+																				<a class="vc_gitem-link"
+																					href="https://reatimes.vn/tuyen-xe-buyt-di-den-ho-hoan-kiem-nhanh-va-thuan-tien-nhat-2022002.htm"
+																					title="Tuyến xe Bus đến Hồ Hoàn Kiếm tiện lợi nhất">
+																					Tuyến xe Bus đến Hồ Hoàn Kiếm tiện lợi nhất
+																				</a>
+																			</h3>
+																		</div>
+																	</div>
+																</div>
+															</div>
+														</div>
+														<div
+															class="vc_gitem-zone vc_gitem-zone-b vc_custom_1419253765784 vc-gitem-zone-height-mode-auto vc_gitem-is-link">
+															<a class="vc_gitem-link vc-zone-link"
+																href="https://reatimes.vn/tuyen-xe-buyt-di-den-ho-hoan-kiem-nhanh-va-thuan-tien-nhat-2022002.htm"
+																title="Tuyến xe Bus đến Hồ Hoàn Kiếm tiện lợi nhất">
+															</a>
+															<div class="vc_gitem-zone-mini"></div>
+														</div>
+													</div>
+												</div>
+												<div class="vc_clearfix"></div>
+											</div>
+											<div class="vc_grid-item vc_clearfix vc_col-sm-3">
+												<div class="vc_grid-item-mini vc_clearfix">
+													<div class="vc_gitem-animated-block vc_gitem-animate vc_gitem-animate-none"
+														data-vc-animation="none">
+														<div class="vc_gitem-zone vc_gitem-zone-a vc-gitem-zone-height-mode-auto vc-gitem-zone-height-mode-auto-1-1 vc_gitem-is-link"
+															style="background-image: url('https://ddk.1cdn.vn/2023/08/03/image.daidoanket.vn-images-upload-lekhanh-08032023-_anh-hoan-kiem-94.jpg') !important;">
+															<a class="vc_gitem-link vc-zone-link"
+																href="https://dantri.com.vn/xa-hoi/nhung-di-tich-van-hoa-kien-truc-noi-tieng-cua-quan-hoan-kiem-20230803182359730.htm?gidzl=mDeaNazICnR3nIrPIaew5i74BLXNI6D2siOjML5ACaBSbNW2LKXYIzp1B0jJGJf5qiWbN3AukIzuIbio7m"
+																title="Những di tích văn hóa, kiến trúc nổi tiếng của quận Hoàn Kiếm">
+															</a>
+															<img alt="Những di tích văn hóa, kiến trúc nổi tiếng của quận Hoàn Kiếm"
+																class="vc_gitem-zone-img"
+																src="https://ddk.1cdn.vn/2023/08/03/image.daidoanket.vn-images-upload-lekhanh-08032023-_anh-hoan-kiem-94.jpg" />
+															<div class="vc_gitem-zone-mini">
+																<div class="vc_gitem_row vc_row vc_gitem-row-position-middle">
+																	<div class="vc_col-sm-12 vc_gitem-col vc_gitem-col-align-">
+																		<div
+																			class="vc_custom_heading vc_gitem-post-data vc_gitem-post-data-source-post_date">
+																			<h3
+																				style="font-size: 22px;color: #ffffff;text-align: center;font-family:Ubuntu Condensed;font-weight:400;font-style:normal">
+																				<a class="vc_gitem-link"
+																					href="https://dantri.com.vn/xa-hoi/nhung-di-tich-van-hoa-kien-truc-noi-tieng-cua-quan-hoan-kiem-20230803182359730.htm?gidzl=mDeaNazICnR3nIrPIaew5i74BLXNI6D2siOjML5ACaBSbNW2LKXYIzp1B0jJGJf5qiWbN3AukIzuIbio7m"
+																					title="Những di tích văn hóa, kiến trúc nổi tiếng của quận Hoàn Kiếm">
+																					04/08/2023
+																				</a>
+																			</h3>
+																		</div>
+																		<div
+																			class="vc_custom_heading vc_gitem-post-data vc_gitem-post-data-source-post_title">
+																			<h3
+																				style="font-size: 22px;color: #ffffff;text-align: center;font-family:Roboto Condensed;font-weight:700;font-style:normal">
+																				<a class="vc_gitem-link"
+																					href="https://dantri.com.vn/xa-hoi/nhung-di-tich-van-hoa-kien-truc-noi-tieng-cua-quan-hoan-kiem-20230803182359730.htm?gidzl=mDeaNazICnR3nIrPIaew5i74BLXNI6D2siOjML5ACaBSbNW2LKXYIzp1B0jJGJf5qiWbN3AukIzuIbio7m"
+																					title="Những di tích văn hóa, kiến trúc nổi tiếng của quận Hoàn Kiếm">
+																					Những di tích văn hóa, kiến trúc nổi tiếng của
+																					quận Hoàn Kiếm
+																				</a>
+																			</h3>
+																		</div>
+																	</div>
+																</div>
+															</div>
+														</div>
+														<div
+															class="vc_gitem-zone vc_gitem-zone-b vc_custom_1419253765784 vc-gitem-zone-height-mode-auto vc_gitem-is-link">
+															<a class="vc_gitem-link vc-zone-link"
+																href="https://dantri.com.vn/xa-hoi/nhung-di-tich-van-hoa-kien-truc-noi-tieng-cua-quan-hoan-kiem-20230803182359730.htm?gidzl=mDeaNazICnR3nIrPIaew5i74BLXNI6D2siOjML5ACaBSbNW2LKXYIzp1B0jJGJf5qiWbN3AukIzuIbio7m"
+																title="Những di tích văn hóa, kiến trúc nổi tiếng của
+																quận Hoàn Kiếm">
+															</a>
+															<div class="vc_gitem-zone-mini"></div>
+														</div>
+													</div>
+												</div>
+												<div class="vc_clearfix"></div>
+											</div>
+											<div class="vc_grid-item vc_clearfix vc_col-sm-3">
+												<div class="vc_grid-item-mini vc_clearfix">
+													<div class="vc_gitem-animated-block vc_gitem-animate vc_gitem-animate-none"
+														data-vc-animation="none">
+														<div class="vc_gitem-zone vc_gitem-zone-a vc-gitem-zone-height-mode-auto vc-gitem-zone-height-mode-auto-1-1 vc_gitem-is-link"
+															style="background-image: url('https://motogo.vn/wp-content/uploads/2020/02/69ace9f7-33e5-47e0-884f-044f6bbd4c15-768x1091.jpg') !important;">
+															<a class="vc_gitem-link vc-zone-link"
+																href="https://motogo.vn/ho-guom-ha-noi/"
+																title="Hồ Gươm có gì? TOP 24 địa điểm vui chơi & món ngon Hoàn Kiếm">
+															</a>
+															<img alt="Hồ Gươm có gì? TOP 24 địa điểm vui chơi & món ngon Hoàn Kiếm"
+																class="vc_gitem-zone-img"
+																src="https://motogo.vn/wp-content/uploads/2020/02/69ace9f7-33e5-47e0-884f-044f6bbd4c15-768x1091.jpg" />
+															<div class="vc_gitem-zone-mini">
+																<div class="vc_gitem_row vc_row vc_gitem-row-position-middle">
+																	<div class="vc_col-sm-12 vc_gitem-col vc_gitem-col-align-">
+																		<div
+																			class="vc_custom_heading vc_gitem-post-data vc_gitem-post-data-source-post_date">
+																			<h3
+																				style="font-size: 22px;color: #ffffff;text-align: center;font-family:Ubuntu Condensed;font-weight:400;font-style:normal">
+																				<a class="vc_gitem-link"
+																					href="https://motogo.vn/ho-guom-ha-noi/"
+																					title="Hồ Gươm có gì? TOP 24 địa điểm vui chơi & món ngon Hoàn Kiếm">
+																					31/10/2023
+																				</a>
+																			</h3>
+																		</div>
+																		<div
+																			class="vc_custom_heading vc_gitem-post-data vc_gitem-post-data-source-post_title">
+																			<h3
+																				style="font-size: 22px;color: #ffffff;text-align: center;font-family:Roboto Condensed;font-weight:700;font-style:normal">
+																				<a class="vc_gitem-link"
+																					href="https://motogo.vn/ho-guom-ha-noi/"
+																					title="Hồ Gươm có gì? TOP 24 địa điểm vui chơi & món ngon Hoàn Kiếm">
+																					Hồ Gươm có gì? TOP 24 địa điểm vui chơi & món ngon Hoàn Kiếm
+																				</a>
+																			</h3>
+																		</div>
+																	</div>
+																</div>
+															</div>
+														</div>
+														<div
+															class="vc_gitem-zone vc_gitem-zone-b vc_custom_1419253765784 vc-gitem-zone-height-mode-auto vc_gitem-is-link">
+															<a class="vc_gitem-link vc-zone-link"
+																href="https://motogo.vn/ho-guom-ha-noi/"
+																title="Hồ Gươm có gì? TOP 24 địa điểm vui chơi & món ngon Hoàn Kiếm">
+															</a>
+															<div class="vc_gitem-zone-mini"></div>
+														</div>
+													</div>
+												</div>
+												<div class="vc_clearfix"></div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
-			<div class="vc_grid-item vc_clearfix vc_col-sm-3 vc_visible-item fadeIn animated">
-				<div class="vc_grid-item-mini vc_clearfix">
-					<div class="vc_gitem-animated-block  vc_gitem-animate vc_gitem-animate-none" data-vc-animation="none">
-						<div class="vc_gitem-zone vc_gitem-zone-a vc-gitem-zone-height-mode-auto vc-gitem-zone-height-mode-auto-1-1 vc_gitem-is-link" 
-						style="background-image: url('https://webdulichdanang.com/wp-content/uploads/2020/02/hoang-hon-ba-na.jpg') !important;">
-						<a href="https://webdulichdanang.com/bang-gia-ve-ba-na-hill-moi-nhat-cap-nhat-thuong-xuyen.html" 
-						title="Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên" class="vc_gitem-link vc-zone-link">
-					</a>
-					<img src="https://webdulichdanang.com/wp-content/uploads/2020/02/hoang-hon-ba-na.jpg" class="vc_gitem-zone-img" alt="Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên">
-					<div class="vc_gitem-zone-mini">
-						<div class="vc_gitem_row vc_row vc_gitem-row-position-middle">
-							<div class="vc_col-sm-12 vc_gitem-col vc_gitem-col-align-">
-								<div class="vc_custom_heading vc_gitem-post-data vc_gitem-post-data-source-post_date">
-									<h3 style="font-size: 22px;color: #ffffff;text-align: center;font-family:Ubuntu Condensed;font-weight:400;font-style:normal">
-										<a href="https://webdulichdanang.com/bang-gia-ve-ba-na-hill-moi-nhat-cap-nhat-thuong-xuyen.html" class="vc_gitem-link" title="Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên">16/02/2023</a>
-									</h3>
-								</div>
-								<div class="vc_custom_heading vc_gitem-post-data vc_gitem-post-data-source-post_title">
-									<h3 style="font-size: 22px;color: #ffffff;text-align: center;font-family:Roboto Condensed;font-weight:700;font-style:normal">
-										<a href="https://webdulichdanang.com/bang-gia-ve-ba-na-hill-moi-nhat-cap-nhat-thuong-xuyen.html" class="vc_gitem-link" title="Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên">Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên</a>
-									</h3>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="vc_gitem-zone vc_gitem-zone-b vc_custom_1419253765784 vc-gitem-zone-height-mode-auto vc_gitem-is-link"><a href="https://webdulichdanang.com/bang-gia-ve-ba-na-hill-moi-nhat-cap-nhat-thuong-xuyen.html" title="Bảng giá vé Bà Nà Hill 2024 mới nhất cập nhật thường xuyên" class="vc_gitem-link vc-zone-link"></a>
-							<div class="vc_gitem-zone-mini">
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="vc_clearfix">
-				</div>
 			</div>
 			
 			<div class="vc_row wpb_row vc_row-fluid margin_60 inner-container">
@@ -602,7 +769,7 @@
 											<div class="ct-icon-box feature_home"><i class="icon_set_1_icon-57"></i>
 												<h4 style="text-align: center; font-weight: bold;"><b>Hỗ
 														trợ</b> 24/7/365</h4>
-												<p class="">Với chatbot giúp du khách có thể nhận được sự hỗ trợ và tư vấn ngay lập tức mọi lúc, mọi nơi, dù ở bất kỳ thời gian và nơi đâu.</p>
+												<p class="">Với chatbot giúp du khách có thể nhận được sự hỗ trợ và tư vấn ngay lập tức mọi lúc, mọi nơi.</p>
 												<p><a class="btn_1 outline"
 														href="#S">Chi tiết</a>
 												</p>
@@ -618,7 +785,7 @@
 					</div>
 				</div>
 			</div>
-		</div><!-- end post -->
+		</div>
 	</div>
 	<footer class="text-center text-lg-start text-white" style="background-color: #929fba">
         <div class="container p-4 pb-0">
@@ -684,9 +851,8 @@
             <a class="text-white" href="https://www.facebook.com/truonghieu.nguyen.3551">NguyenTruongHieu - VuTheBao - DuongThiHue</a>
         </div>
     </footer>
-	<div id="toTop"></div><!-- Back to top button -->
 	<div id="overlay"><i class="icon-spin3 animate-spin"></i></div>
-	<div class="hk-option-button-contact" style="padding-bottom: 40px;">
+	<div class="hk-option-button-contact" style="padding-bottom: 40px; padding-left:20px;">
         <ul>
             <li class="phone-container">
                 <a href="https://zalo.me/0967296991" target="_blank"><span class="button-hk-contact zalo"
