Fix sign up bug, some text

--- a/templates/allPlace.html
+++ b/templates/allPlace.html
@@ -278,7 +278,7 @@
             <div class="row">
                 <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                     <h6 class="text-uppercase mb-4 font-weight-bold" id="about-us">
-                        About Us
+                        Về chúng tôi
                     </h6>
                     <style>
                         .text-uppercase{
@@ -293,24 +293,24 @@
                 </div>
                 <hr class="w-100 clearfix d-md-none" />
                 <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Navigator</h6>
-                    <p> <a class="text-white" href="/">Home</a> </p>
-                    <p> <a class="text-white" href="/all/hotel">Hotels</a> </p>
-                    <p> <a class="text-white" href="/all/place">Places</a> </p>
+                    <h6 class="text-uppercase mb-4 font-weight-bold">Điều hướng</h6>
+                    <p> <a class="text-white" href="/">Trang chủ</a> </p>
+                    <p> <a class="text-white" href="/all/hotel">Khách sạn</a> </p>
+                    <p> <a class="text-white" href="/all/place">Địa điểm</a> </p>
                     <p>
-                        <a class="text-white" href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Maps</a>
+                        <a class="text-white" href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a>
                     </p>
                 </div>
                 <hr class="w-100 clearfix d-md-none" />
                 <hr class="w-100 clearfix d-md-none" />
                 <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-                    <p><i class="fas fa-home mr-3"></i> <br> <a href="https://www.haui.edu.vn/en" class="contact-infor"> Hanoi University of Industry</a></p>
+                    <h6 class="text-uppercase mb-4 font-weight-bold">Liên hệ</h6>
+                    <p><i class="fas fa-home mr-3"></i> <br> <a href="https://www.haui.edu.vn/en" class="contact-infor"> Đại học Công Nghiệp Hà Nội</a></p>
                     <p><i class="fas fa-envelope mr-3"></i> <br> <a href="mailto:truonghieu2312@gmail.com" class="contact-infor">truonghieu2312@gmail.com</a></p>
                     <p><i class="fas fa-phone mr-3"></i> <br> <a href="tel:0967.296.991" class="contact-infor"> 0967 296 991</a></p>
                 </div>
                 <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                    <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
+                    <h6 class="text-uppercase mb-4 font-weight-bold">Theo dõi chúng tôi</h6>
                     <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/truonghieu.nguyen.3551" role="button">
                         <i class="fab fa-facebook-f"></i>
                     </a>
@@ -324,9 +324,16 @@
             </div>
         </section>
     </div>
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <df-messenger
+        intent="WELCOME"
+        chat-title="chatBotDA"
+        agent-id="521dd979-75ec-4506-ad95-06eb9c2c2f65"
+        language-code="vi">
+    </df-messenger>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)"> 
         © 2024 Copyright: <br>
-        <a class="text-white" href="https://www.facebook.com/truonghieu.nguyen.3551">NguyenTruongHieu - VuTheBao - DuongThiHue</a>
+        <p class="text-white">NguyenTruongHieu - VuTheBao - DuongThiHue</p>
     </div>
 </footer>
 	<div id="toTop"></div><!-- Back to top button -->
