--- a/templates/main.html
+++ b/templates/main.html
@@ -156,13 +156,13 @@
 						<div class="menu-menu-chinh-container">
 							<ul class="menu" id="menu-menu-chinh">
 								<li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-1455"
-									id="menu-item-1455"><a aria-current="page" href="#">Home</a></li>
+									id="menu-item-1455"><a aria-current="page" href="#">Trang chủ</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1457"
-									id="menu-item-1457"><a href="#hotel-container">Hotels</a></li>
+									id="menu-item-1457"><a href="#hotel-container">Khách sạn</a></li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2201"
 									id="menu-item-2201"><a href="#blog">Blog</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2451"
-									id="menu-item-2451"><a href="#place-container">Places</a></li>
+									id="menu-item-2451"><a href="#place-container">Địa điểm</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1458"
 									id="menu-item-1458"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a>
 								</li>
@@ -411,7 +411,7 @@
 							<div>
 								<div class="main_title">
 									<h2>Top <b>Địa</b> Điểm</h2>
-									<p>Places du lịch ở Quận Hoàn Kiếm, Hà Nội</p>
+									<p>Địa điểm du lịch ở Quận Hoàn Kiếm, Hà Nội</p>
 								</div>
 							</div>
 								<div class="hotel-list row add-clearfix">
@@ -543,7 +543,7 @@
 									<style data-type="vc_shortcodes-custom-css">
 										.vc_custom_1419253765784 {
 											background-color: rgba(0, 0, 0, 0.3) !important;
-											*background-color: rgb(0, 0, 0) !important;
+											background-color: rgb(0, 0, 0) !important;
 										}
 									</style>
 									<div class="vc_grid vc_row vc_grid-gutter-30px vc_pageable-wrapper vc_hook_hover"
@@ -793,7 +793,7 @@
                 <div class="row">
                     <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
                         <h6 class="text-uppercase mb-4 font-weight-bold" id="about-us">
-                            About Us
+                            Về chúng tôi
                         </h6>
                         <style>
                             .text-uppercase{
@@ -808,24 +808,24 @@
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">Navigator</h6>
-                        <p> <a class="text-white" href="/">Home</a> </p>
-                        <p> <a class="text-white" href="/all/hotel">Hotels</a> </p>
-                        <p> <a class="text-white" href="/all/place">Places</a> </p>
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Điều hướng</h6>
+                        <p> <a class="text-white" href="/">Trang chủ</a> </p>
+                        <p> <a class="text-white" href="/all/hotel">Khách sạn</a> </p>
+                        <p> <a class="text-white" href="/all/place">Địa điểm</a> </p>
                         <p>
-                            <a class="text-white" href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Maps</a>
+                            <a class="text-white" href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a>
                         </p>
                     </div>
                     <hr class="w-100 clearfix d-md-none" />
                     <hr class="w-100 clearfix d-md-none" />
                     <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">Contact</h6>
-                        <p><i class="fas fa-home mr-3"></i> <br> <a href="https://www.haui.edu.vn/en" class="contact-infor"> Hanoi University of Industry</a></p>
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Liên hệ</h6>
+                        <p><i class="fas fa-home mr-3"></i> <br> <a href="https://www.haui.edu.vn/en" class="contact-infor"> Đại học Công Nghiệp Hà Nội</a></p>
                         <p><i class="fas fa-envelope mr-3"></i> <br> <a href="mailto:truonghieu2312@gmail.com" class="contact-infor">truonghieu2312@gmail.com</a></p>
                         <p><i class="fas fa-phone mr-3"></i> <br> <a href="tel:0967.296.991" class="contact-infor"> 0967 296 991</a></p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
-                        <h6 class="text-uppercase mb-4 font-weight-bold">Follow us</h6>
+                        <h6 class="text-uppercase mb-4 font-weight-bold">Theo dõi chúng tôi</h6>
                         <a class="btn btn-primary btn-floating m-1" style="background-color: #3b5998" href="https://www.facebook.com/truonghieu.nguyen.3551" role="button">
                             <i class="fab fa-facebook-f"></i>
                         </a>
@@ -848,7 +848,7 @@
 		</df-messenger>
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)"> 
             © 2024 Copyright: <br>
-            <a class="text-white" href="https://www.facebook.com/truonghieu.nguyen.3551">NguyenTruongHieu - VuTheBao - DuongThiHue</a>
+            <p class="text-white">NguyenTruongHieu - VuTheBao - DuongThiHue</p>
         </div>
     </footer>
 	<div id="overlay"><i class="icon-spin3 animate-spin"></i></div>
