--- a/templates/signin.html
+++ b/templates/signin.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/signup.css">
     <link rel="stylesheet" href="/static/mdb/css/login.css">
-    <title>Login</title>
+    <title>Sign up</title>
 </head>
 <body>
     {% if error %}
@@ -32,16 +33,22 @@
                     {% endfor %}
                 {% endif %}
             {% endwith %}
-            <form class="form" autocomplete="off" method="post" action="/signin">
+            <div style="display: none;"><input type="text"></div>
+            <form class="form" autocomplete="off">
                 <div class="form-group">
-                    <label for="email">Username *</label>
-                    <input
-                        type="text"
-                        name="username"
-                        id="username"
-                        placeholder="Username"
-                        class="form-input"
+                    <label for="username">Username *</label>
+                    <input 
+                        type="text" 
+                        name="username" 
+                        id="username" 
+                        placeholder="Username" 
+                        class="form-input" 
+                        onfocus="showUserCriteria()"
+                        onblur="hideUserCriteria()"
                     />
+                    <div id="user-criteria" style="padding-top: 10px; padding-left: 20px;">
+                        <small id="user-length-criteria" class="form-text text-muted">Username phải có từ 5 đến 10 kí tự</small>
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="password">Password *</label>
@@ -51,23 +58,40 @@
                         id="password"
                         placeholder="Password"
                         class="form-input"
+                        onfocus="showPasswordCriteria()"
+                        onblur="hidePasswordCriteria()"
                     />
+                    <ul id="password-criteria" class="password-criteria">
+                        <li>
+                            <small id="length-criteria" class="form-text text-muted">Mật khẩu phải có ít nhất 8 kí tự (> 8)</small>
+                        </li>
+                        <li>
+                            <small id="number-criteria" class="form-text text-muted">Mật khẩu phải có ít nhất 1 kí tự số (0 - 9)</small>
+                        </li>
+                        <li>
+                            <small id="case-criteria" class="form-text text-muted">Mật khẩu phải có ít nhất 1 kí tự in hoa và in thường (a-z & A-Z)</small>
+                        </li>
+                    </ul>
                 </div>
                 <div class="form-group">
                     <label for="email">Email *</label>
-                    <input
-                        type="text"
-                        name="email"
-                        id="email"
-                        placeholder="Email"
-                        class="form-input"
+                    <input 
+                        type="text" 
+                        name="email" 
+                        id="email" 
+                        placeholder="Email" 
+                        class="form-input" 
+                        onfocus="showEmailCriteria()"
+                        onblur="hideEmailCriteria()"
                     />
+                    <div id="email-criteria" style="padding-top: 10px; padding-left: 20px;">
+                        <small id="valid-email-criteria" class="form-text text-muted">Email chính xác</small>
+                    </div>
                 </div>
-                <a href="{{url_for('LoginPage')}}">Return to login ?</a>
-                <button type="submit" class="form-btn">
-                    Sign in
-                </button>
+                <a href="/login">Trở về đăng nhập ?</a>
+                <button onclick="validateForm()" class="form-btn">Sign up</button>
             </form>
+            <script src="/static/js/signup.js"> </script>
         </div>
     </div>
 </body>
