update direction.html + new tabs

--- a/templates/allHotel.html
+++ b/templates/allHotel.html
@@ -188,8 +188,15 @@
 									id="menu-item-1457"><a href="/all/place">Places</a></li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2201"
 									id="menu-item-2201"><a href="#blog">Blog</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1458"
-									id="menu-item-1458"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a>
+                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1458"
+									id="menu-item-1458"><a>Trợ giúp</a>
+									<ul class="sub-menu">
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"
+											id="menu-item-1495"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a>
+										</li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1484"
+											id="menu-item-1484"><a href="directions.html">Chỉ đường</a></li>
+									</ul>
 								</li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1478 logout-menu-item" id="menu-item-1478">
 									<a href="/logout">Đăng xuất</a>
