--- a/templates/allPlace.html
+++ b/templates/allPlace.html
@@ -111,6 +111,7 @@
         href="https://fonts.googleapis.com/css?family=Montserrat%3A400%2C700%7CBangers%7CLato%3A300%2C400&amp;subset=vietnamese%2Clatin%2Clatin-ext&amp;ver=5.8.6"
         id="ct_gootle_fonts-css" media="all" rel="stylesheet" type="text/css" />
     <link href="/static/css/styles4.css" id="ct_child_theme_css-css" media="all" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="/static/css/show-animation.css">
     <script id="jquery-core-js" src="/static/js/jquery.min.js" type="text/javascript"></script>
     <script id="jquery-migrate-js" src="/static/js/jquery-migrate.min.js" type="text/javascript"></script>
     <script id="tp-tools-js" src="/static/js/jquery.themepunch.tools.min.js" type="text/javascript"></script>
@@ -182,13 +183,21 @@
 						<div class="menu-menu-chinh-container">
 							<ul class="menu" id="menu-menu-chinh">
 								<li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-1455"
-									id="menu-item-1455"><a aria-current="page" href="/">Home</a></li>
+									id="menu-item-1455"><a aria-current="page" href="/">Trang chủ</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1457"
-									id="menu-item-1457"><a href="/all/hotel">Hotels</a></li>
+									id="menu-item-1457"><a href="/all/hotel">Khách sạn</a></li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-2201"
 									id="menu-item-2201"><a href="#blog">Blog</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1458"
-									id="menu-item-1458"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a>
+                                <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1458"
+									id="menu-item-1458"><a>Trợ giúp</a>
+									<ul class="sub-menu">
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"
+											id="menu-item-1495"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a>
+										</li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1484"
+											id="menu-item-1484"><a href="/directions">Chỉ đường</a>
+                                        </li>
+									</ul>
 								</li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1478 logout-menu-item" id="menu-item-1478">
 									<a href="/logout">Đăng xuất</a>
@@ -246,11 +255,13 @@
 				</p> -->
 				<div id="filters_col">
 					<a aria-controls="collapseFilters" aria-expanded="false" data-toggle="collapse"
-						href="#collapseFilters" id="filters_col_bt">BỘ LỌC </a>
+						href="#collapseFilters" id="filters_col_bt" style="text-align: center; padding-top: 5px; font-size: 20px;">BỘ LỌC </a>
 						<br>
-					<div class="collapse" id="collapseFilters">
+                    <div style="font-size: 15px;">
 						<div class="filter_type">
-							<h6>GIÁ</h6>
+							<div class="form-group">
+							</div>
+							<h6 style="text-align: center; font-size: 20px;">GIÁ</h6>
 							<ul class="list-filter price-filter" data-arg="price_filter"
 								data-base-url="/place?view=list">
 								<li><label><input name="price_filter[]" id="00" type="radio" value="0" /> 0đ - 50.000đ </label></li>
@@ -260,7 +271,7 @@
                             </ul>
 							<button type="button" id="search-button" class="btn btn-success btn-lg">Search</button>
 						</div>
-					</div><!--End collapse -->
+					</div>
 				</div><!--End filters col-->
 			</aside><!--End aside -->
 			<div class="col-lg-9 col-md-8">
@@ -287,6 +298,9 @@
                         }
                         .contact-infor{
                             color: white; 
+                        }
+                        .copyrights{
+                            font-size: 1.5rem;
                         }
                     </style>
                     <p> Khám phá vẻ đẹp của Hoàn Kiếm </p>
@@ -332,8 +346,7 @@
         language-code="vi">
     </df-messenger>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)"> 
-        © 2024 Copyright: <br>
-        <p class="text-white">NguyenTruongHieu - VuTheBao - DuongThiHue</p>
+        <p class="text-white copyrights">© 2024 Copyright: NguyenTruongHieu - VuTheBao - DuongThiHue</p>
     </div>
 </footer>
 	<div id="toTop"></div><!-- Back to top button -->
