--- a/templates/main.html
+++ b/templates/main.html
@@ -163,8 +163,15 @@
 									id="menu-item-2201"><a href="#blog">Blog</a></li>
 								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2451"
 									id="menu-item-2451"><a href="#place-container">Địa điểm</a></li>
-								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-1458"
-									id="menu-item-1458"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a>
+								<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-1458"
+									id="menu-item-1458"><a>Trợ giúp</a>
+									<ul class="sub-menu">
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1495"
+											id="menu-item-1495"><a href="https://www.google.com/maps/place/Ho%C3%A0n+Ki%E1%BA%BFm,+H%C3%A0+N%E1%BB%99i,+Vi%E1%BB%87t+Nam/@21.0304298,105.8343224,14z/data=!3m1!4b1!4m6!3m5!1s0x3135abbf59d8f429:0x7830a3dfd6e566a1!8m2!3d21.027964!4d105.8510132!16s%2Fm%2F03m3vn7?hl=vi-VN&entry=ttu">Bản đồ</a>
+										</li>
+										<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1484"
+											id="menu-item-1484"><a href="/directions">Chỉ đường</a></li>
+									</ul>
 								</li>
 								<li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1478 logout-menu-item" id="menu-item-1478">
 									<a href="/logout">Đăng xuất</a>
@@ -543,7 +550,6 @@
 									<style data-type="vc_shortcodes-custom-css">
 										.vc_custom_1419253765784 {
 											background-color: rgba(0, 0, 0, 0.3) !important;
-											background-color: rgb(0, 0, 0) !important;
 										}
 									</style>
 									<div class="vc_grid vc_row vc_grid-gutter-30px vc_pageable-wrapper vc_hook_hover"
@@ -721,8 +727,6 @@
 					</div>
 				</div>
 			</div>
-			</div>
-			
 			<div class="vc_row wpb_row vc_row-fluid margin_60 inner-container">
 				<div class="container">
 					<div class="row">
@@ -803,6 +807,9 @@
                             .contact-infor{
                                 color: white; 
                             }
+							.copyrights{
+								font-size: 1.5rem;
+							}
                         </style>
                         <p> Khám phá vẻ đẹp của Hoàn Kiếm </p>
                     </div>
@@ -847,8 +854,7 @@
 			language-code="vi">
 		</df-messenger>
         <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)"> 
-            © 2024 Copyright: <br>
-            <p class="text-white">NguyenTruongHieu - VuTheBao - DuongThiHue</p>
+            <p class="text-white copyrights">© 2024 Copyright: NguyenTruongHieu - VuTheBao - DuongThiHue</p>
         </div>
     </footer>
 	<div id="overlay"><i class="icon-spin3 animate-spin"></i></div>
