--- a/templates/main.html
+++ b/templates/main.html
@@ -849,7 +849,7 @@
 		<script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 		<df-messenger
 			intent="WELCOME"
-			chat-title="chatBotDA"
+			chat-title="Hiếu Cute"
 			agent-id="521dd979-75ec-4506-ad95-06eb9c2c2f65"
 			language-code="vi">
 		</df-messenger>
